<resources>
    <string name="app_name">星语</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="soonreg">立即注册</string>
    <string name="forgetpaaword">忘记密码</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_msend">MSendActivity</string>
</resources>
