<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/etpassword"
        android:layout_marginTop="139dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:background="#fd4080"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="19dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:clickable="true"
        android:onClick="skipreg"
        android:text="@string/soonreg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:text="@string/forgetpaaword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword"
        android:layout_below="@+id/etpassword"
        android:checked="false"
        android:text="自动登陆" />

</RelativeLayout>
