<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="166dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        style="@style/mybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerInParent="true"
        android:layout_marginTop="57dp"
        android:onClick="reg"
        android:text="@string/soonreg" />
</RelativeLayout>
